--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
               <p>The HDVaults will earn from a 1.5% fee from all sell orders and transactions made with HDCORE. HDPools will earn from profit strategy contracts to earn interest.</p>
               <p>The HDPools  constantly buy HDCORE from the market!  .</p>
               <p>HARDCORE Vault Finance's goal is to maximise HDVault and HDPool  user profits and to constantly improve/develop the protocol to be a competitive profit-making asset for our investors. </p>
+              <br>
+              <button class="tui-button purple-168"><a style="padding: 0px; color: #fff;" class="tui-tab" data-tab-content="tab-2-content">Get Started with HDCORE Vault</a></button>
           </td>
       </tr>
    </tbody>
@@ -134,6 +136,8 @@
                       <td width="25" height="650px">
                           <p>HDVaults earn their APY from a 1.5% fee from all sell orders and transactions made with HDCORE. This includes all trading volume of DEXs and any transaction on the blockchain.</p>
                           <p>APY is calculated by the LP value; ETH price and HDCORE price and the trading volume - the more trading, the more profit HDVault receives to share amongst the stakers.</p>
+                          <br>
+                          <button class="tui-button purple-168"><a style="padding: 0px; color: #fff;" class="tui-tab" data-tab-content="tab-3-content">HDzap ETH to Stake in HDVault</a></button>
                       </td>
                   </tr>
                </tbody>
