--- a/index.html
+++ b/index.html
@@ -195,15 +195,21 @@
                         <div class="tui-window purple-167" style="margin: 10px;">
                           <fieldset class="tui-fieldset">
                             <legend class="center">DAI HDPool 01</legend>
-                            <br>APY (daily) %.......: [<span>APY Discovery</span>]
+                               <br>Strategy .......................: [<span>DAI Curve</span>]
                             <br>
-                            <br>APY (weekly) %......: [<span>APY Discovery</span>]
+                            <br>APY (daily) % ..............: [<span id="dai-pool-apy-daily">APY Discovery</span>]
+                            
+
+                            
+                            <!-- <br>APY (weekly) %......: [<span>APY Discovery</span>] -->
                             <br>
-                            <br>Total Staked DAI....: [<span id="dai-pool-tvl">0.00000</span>]
+                            <br>Total Staked DAI.......: [<span id="dai-pool-tvl">0.00000</span>]
                             <br>
-                            <br>Your Staked DAI.....: [<span id="dai-pool-your-staked">0.00000</span>]
+                            <br>Your Staked DAI........: [<span id="dai-pool-your-staked">0.00000</span>]
                             <br>
                             <br>Your Unstaked DAI...: [<span id="dai-balance">0.00000</span>]
+                            <br>
+                            <br>Est. HDCORE Rewards: [<span id="est-hdcore-rewards">0.00000</span>]
                             <br><br>
                             <hr class="tui-divider"></hr>   <!-- With space -->
 
