--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <legend class="center">DAI HDPool 01</legend>
                                <br>Strategy .......................: [<span>DAI Curve</span>]
                             <br>
-                            <br>APY (daily) % ..............: [<span id="dai-pool-apy-daily">APY Discovery</span>]
+                            <br>APY % .............................: [<span id="dai-pool-apy-daily">APY Discovery</span>]
                             
 
                             
