updated hdcore front end

--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
 </head>
 
 <body class="tui-bg-purple-black">
-    <div class="tui-screen-1024-768 purple-169 main centered bordered white-168">
+    <div class="tui-screen-1024-768 blue-169 main centered bordered white-168">
  
         <div class="tui-panel purple-169 full-width black-255-text tui-no-shadow center">
             <!-- Focused -->
-            <button id="walletconnect" onclick="connect()" class="tui-button white-text purple-168 tui-no-shadow" autofocus>Connect Wallet</button>
+            <button id="walletconnect" onclick="connect()" class="tui-button white-text blue-168 tui-no-shadow" autofocus>Connect Wallet</button>
         </div>
-        <div class="tui-tabs purple-167">
+        <div class="tui-tabs blue-167">
             <ul>
                 <li><a class="tui-tab active" data-tab-content="tab-1-content">$HDCORE</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-2-content">$HDVaults</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-3-content">HDzap</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-4-content">HDPools</a></li>
-                <li><a class="tui-tab" data-tab-content="tab-5-content">LGE</a></li>
                 <li><a class="tui-tab" data-tab-content="tab-6-content">HDCAPITAL Pools</a></li>
             </ul>
         </div>
@@ -38,17 +37,17 @@
             <tbody>	
                 <tr>	
                     <td rowspan="2" width="60%" class="blue-168-text">
-          <div class="tui-window purple-167" style="margin: 20px;">
+          <div class="tui-window blue-167" style="margin: 20px;">
             <fieldset class="tui-fieldset">
               <legend class="center">Summary</legend>
 
               <legend class="center">$HDCORE</legend>
               <br>Total Supply........: [<span>10,000</span>]
               <br>
-              <br>Forever-Locked Supply.......: [<span id="HDcore-locked">0.00000</span>]
+              <br>LP Locked Supply.......: [<span id="HDcore-locked">0.00000</span>]
               <br>
               <br>Your Wallet..............: [<span id="HDCore-wallet-balance">0.00000</span>]
-              <a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x3dde2e3a7d1b4e62d2e0cf5d16c9fee667d47551" target="_blank" ><button class="tui-button purple-168 white-text">GET HDCORE</button></a>
+              <a href="https://app.uniswap.org/#/swap?inputCurrency=0x41d54404a20de005a3a4d5e72ca0c469a5d7866a" target="_blank" ><button class="tui-button purple-168 white-text">GET HDCORE</button></a>
               <br>
               <br>Claimable...........: [<span id="HDCore-claimable-balance">0.00000</span>]
               <br><br>
@@ -69,15 +68,15 @@
           <p style="margin: 10px;" class="nq-notice warning" id="warning"></p>
         </td>
         <td width="40%" class="center">
-          HARDCORE Vault Finance v1
+          HARDCORE Vault Finance v3
         </td>
       </tr>
       <tr>
           <td width="25" height="650px">
-              <p>HARDCORE Vault  is a Deflationary  farming model. 20% of Total HDCORE Supply   allocated on LGE for Liquidity is locked and earns HDCORE from the HDVAULT when you lock your LP tokens. LGE Contributor also  receive  HDCORE tokens of equal value to their contribution(LGE contributors get LP tokens  + $HDCORE tokens for their support! You HARDCORE bruh) .</p>
-              <p>The HDVaults will earn from a 1.5% fee from all sell orders and transactions made with HDCORE. HDPools will earn from profit strategy contracts to earn interest.</p>
-              <p>The HDPools  constantly buy HDCORE from the market!  .</p>
-              <p>HARDCORE Vault Finance's goal is to maximise HDVault and HDPool  user profits and to constantly improve/develop the protocol to be a competitive profit-making asset for our investors. </p>
+              <p>HARDCORE Vault  is a Deflationary  farming protocol.NO DEV MINT FUNCTION.UNRUGGABLE. 10K tokens MAX SUPPLY  .</p>
+              <p>The HDVaults will earn from a 2 % fee from all sell orders and transactions made with HDCORE. HDPools will earn from profit strategy contracts to earn interest.</p>
+              <p>$HDCORE  .</p>
+              <p>HARDCORE Vault Finance's goal is to maximise HDVault user profits and to constantly improve/develop the protocol to be a competitive profit-making asset for our investors. </p>
               <br>
               <button class="tui-button purple-168"><a style="padding: 0px; color: #fff;" class="tui-tab" data-tab-content="tab-2-content">Get Started with HDCORE Vault</a></button>
           </td>
@@ -91,7 +90,7 @@
               <tbody>
                   <tr>
                       <td rowspan="2" width="60%" class="blue-168-text">
-                        <div class="tui-window purple-167" style="margin: 10px;">
+                        <div class="tui-window blue-167" style="margin: 10px;">
                           <fieldset class="tui-fieldset">
                             <legend class="center">HDCORE-ETH LP Vault V2</legend>
                             <br>APY %...............: [<span id="apyLP-v2">0.000</span>]
@@ -129,12 +128,12 @@
                         </div>
                       </td>
                       <td width="40%" class="center">
-                        HDVaults - Deflationary Farming 
+                        HDVaults - Deflationary Farming Protocol 
                       </td>
                   </tr>
                   <tr>
                       <td width="25" height="650px">
-                          <p>HDVaults earn their APY from a 1.5% fee from all sell orders and transactions made with HDCORE. This includes all trading volume of DEXs and any transaction on the blockchain.</p>
+                          <p>HDVaults earn their APY from a 2 % fee from all sell and transactions made with HDCORE(Samewith CORE). This includes all trading volume of DEXs and any transaction on the blockchain.</p>
                           <p>APY is calculated by the LP value; ETH price and HDCORE price and the trading volume - the more trading, the more profit HDVault receives to share amongst the stakers.</p>
                           <br>
                           <button class="tui-button purple-168"><a style="padding: 0px; color: #fff;" class="tui-tab" data-tab-content="tab-3-content">HDzap ETH to Stake in HDVault</a></button>
@@ -149,7 +148,7 @@
               <tbody>
                   <tr>
                       <td rowspan="2" width="60%" class="blue-168-text">
-                          <div class="tui-window purple-167" style="margin: 10px;">
+                          <div class="tui-window blue-167" style="margin: 10px;">
                             <fieldset class="tui-fieldset">
                               <legend class="center">ETH  to HDCORE-ETH LP token</legend>
                               <div>
@@ -192,7 +191,7 @@
               <tbody>
                   <tr>
                       <td rowspan="2" width="60%" class="blue-168-text">
-                        <div class="tui-window purple-167" style="margin: 10px;">
+                        <div class="tui-window blue-167" style="margin: 10px;">
                           <fieldset class="tui-fieldset">
                             <legend class="center">DAI HDPool 01</legend>
                                <br>Strategy .......................: [<span>DAI Curve</span>]
@@ -249,7 +248,7 @@
                 <tbody>
                     <tr>
                         <td rowspan="2" width="60%" class="blue-168-text">
-                            <div class="tui-window purple-167" >
+                            <div class="tui-window blue-167" >
                                 <fieldset class="tui-fieldset">
                                   <legend class="center">HDCORE-ETH LGE</legend>
                                   <br>Time Remaining......: [<span id="countdown">00:00:00:00</span>]
@@ -314,8 +313,8 @@
                     </tr>
                     <tr>
                         <td width="25" height="650px">
-                            <p>The HDCORE Liquidity Generation Event allows investors to contribute and lock their ETH.LGE Contributor also receive HDCORE tokens of equal value to their contribution(LGE contributors get LP tokens + $HDCORE tokens for their support! You HARDCORE bruh) . After the event is over, all contributed ETH will be deposited as liquidity to UniSwap.</p>
-                            <p>ETH depositors will be able to claim their share of LP tokens and HDCORE tokens once the event has ended and liquidity has been added.</p>
+                            <p>The HDCORE Liquidity Generation Event allows investors to contribute and lock their ETH. After the event is over, all contributed ETH will be deposited as liquidity to UniSwap.</p>
+                            <p>ETH depositors will be able to claim their share of LP tokens once the event has ended and liquidity has been added.</p>
                             <p>By depositing, you are agreeing that the team behind HDCORE is not responsible for your funds after the event is over.</p>
                             <p><a class="blue-255-text" href="#">Learn more about HDCORE</a></p>
                         </td>
@@ -334,12 +333,12 @@
 
         <div class="tui-statusbar absolute purple-167">
             <ul>
-                <li><a target="_blank" href="https://twitter.com/HDCOREvaults"><span class="white-255-text">Twitter</span></a></li>
-                <li><a target="_blank" href="https://info.uniswap.org/token/0x3dde2e3a7d1b4e62d2e0cf5d16c9fee667d47551"><span class="white-255-text">Uniswap</span></a></li>
+                <li><a target="_blank" href="https://twitter.com/HDCORE_Vault"><span class="white-255-text">Twitter</span></a></li>
+                <li><a target="_blank" href="https://info.uniswap.org/token/0x41d54404a20de005a3a4d5e72ca0c469a5d7866a"><span class="white-255-text">Uniswap</span></a></li>
                 <li><a target="_blank" href="https://t.me/HARDCOREVAULTs"><span class="white-255-text">Telegram</span></a></li>
                 <li><a target="_blank" href="https://discord.gg/SUAzMh"><span class="white-255-text">Discord</span></a></li>
                 <li><a target="_blank" href="https://github.com/yieldbase"><span class="white-255-text">Github</span></a></li>
-                <li><a target="_blank" href="https://etherscan.io/token/0x3DDE2e3a7d1B4e62d2e0Cf5d16C9FeE667d47551"><span class="white-255-text">Contract</span></a></li>
+                <li><a target="_blank" href="https://etherscan.io/address/0x41d54404a20de005a3a4d5e72ca0c469a5d7866a"><span class="white-255-text">Contract</span></a></li>
                 <span class="tui-datetime white-text" data-format="y/M/d H:m:s a"></span>
             </ul>
         </div>
