fix: fixes link and content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             				
             
 		        <li><a class="tui-tab" href="https://www.bakeryswap.org/#/swap?inputCurrency=0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c&outputCurrency=0xf5128928f85f16bd67c1e02ddd1b47a71d17adf5">Buy on Bakeryswap</a></li>
-            <li><a class="tui-tab" href="http://bhc-bsc-pool.surge.sh/">Happy Pool</a></li>
+            <li><a class="tui-tab" href="https://happy.bsccorefi.io/">Happy Pool</a></li>
             <li><a class="tui-tab" href="https://dex.guru/token/0xf5128928f85f16bd67c1e02ddd1b47a71d17adf5-bsc">Price Chart</a></li>
             <li><a class="tui-tab" href="https://www.bsccorefi.io/">Go Back to Main</a></li>
 			</u>
@@ -168,8 +168,7 @@
                   </tr>
                   <tr>
                       <td width="25" height="615px">
-                        <p>No Lock up on Pool Liquidity Pancakeswap and Julswap Exchange.Pool allocation is up to 20% of the Vault's APY .</p>
-                        <p>Deflationary tokenomics is the real game.10% of Dev fees sent to  Vault is Burned forever reducing the circulating supply.</p>
+                        <p>No Lock up on Pool Liquidity Pancakeswap and Julswap Exchange .</p>
                         <p>APY is calculated by the LP value, BNB price, BSC price and the trading volume - the more people are trading, the more  BSC tokens Core Vault receives , the higher the Annual projected yiled (APY) .</p>
                         <br>
                           <!--<button class="tui-button black-168"><a style="padding: 0px; color: #fff;" class="tui-tab" data-tab-content="tab-3-content">BSCZap BNB to Stake in the Vault</a></button>-->
